apps/base/bjj/networking/gateways/main-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: bjj
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    hostname: bjjbackend.cardano.vip
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    hostname: bjjbackend.cardano.vip
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: bjjbackend-tls
    allowedRoutes:
      namespaces:
        from: All
